----------
v4.3.0-git
----------



------
v4.2.0
------

[jan] Fix error after successful import (Thomas Jarosch
      <thomas.jarosch@intra2net.com>, Bug #13272).
[jan] Fix link on edit form to delete notes (Thomas Jarosch
      <thomas.jarosch@intra2net.com>, Bug #13271).
[jan] Fix exporting tags to CSV (Thomas Jarosch <thomas.jarosch@intra2net.com>,
      Bug #13269).
[jan] Fix adding and editing notes with Kolab backend (Bug #13269).


---------
v4.2.0RC1
---------

[jan] Update Polish translation (Maciej Uhlig <maciej.uhlig@us.edu.pl>).
[jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).


------------
v4.2.0alpha1
------------

[jan] Make SQL backend compatible with Oracle.
[jan] Make shares table compatible with Oracle.
[jan] Make notepad checkbox links switches instead of toggles.
[jan] Replace categories with tags.
[jan] Convert to Horde_View.


------
v4.1.3
------

[jan] Add Korean translation (Deokgon Kim <dgkim@dgkim.net>).
[jan] Update Danish translation (Erling Preben Hansen <erling@eph.dk>).
[mjr] Fix unencrypting and saving a previously encrypted note (Bug #12890).
[mjr] Fix fatal error when exporting encrypted notes via ActiveSync.
[mjr] Fix saving note after saving failed due to mismatched passwords (Bug
      #12855).


------
v4.1.2
------

[jan] SECURITY: Fix XSS vulnerabilities when deleting notepads.
[mjr] Fix removing a list of UIDs via the API (Bug #12790,
      thomas.jarosch@intra2net.com)
[mjr] Fix exporting memos as v-note (horde@albasoft.com, Bug #12622).


------
v4.1.1
------

[mjr] Add API methods for using history modification sequences.


------
v4.1.0
------

[jan] Fix incorrect dependencies.


-----------
v4.1.0beta1
-----------

[jan] Add Ukrainian translation (Andriy Kopystyansky <anri@polynet.lviv.ua>).
[mjr] Add support for ActiveSync synchronization of notes.


------
v4.0.3
------

[jan] Update Slovak translation (Jozef Sudolský <jozef.sudolsky@elbia.sk>).